# static_lambda

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  singleheader.hpp  static_lambda.sln
include/static_lambda/: common.hpp  detour_lambda.hpp  detour_static.hpp  ldisasm.hpp  slunixapi.hpp  slwinapi.hpp  static_lambda.hpp  sysapi.hpp
src/: common.hpp  detour_static.cpp  detours.h  disasm.cpp  disasm_wrapper.cpp  disasm_wrapper.hpp  slwinapi.asm  sysapi.cpp  sysapi.hpp  windows_types.hpp
static_lambda/: common.hpp  detour_lambda.hpp  ldisasm.cpp  slwinapi.asm  slwinapi.hpp  static_lambda.hpp  static_lambda.vcxproj  static_lambda.vcxproj.filters
test/: Dockerfile  main.cpp  main2.cpp  run_linux.ps1  test.vcxproj
